# agentic-burned-area-explorer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: db.py  main.py  models.py  settings.py
backend/app/agent/: router.py
backend/app/analytics/: __init__.py  ba300_store.py  burned_area.py  temporal.py
backend/app/api/: routes.py
backend/app/core/: demo_data.py  imagery_preview.py  reports.py  stac_search.py
backend/app/data/aoi/: greece.geojson
backend/app/data/demo/: aod_timeseries_2024.json  clusters_2024.geojson  drought_timeseries_2024.json  imagery_candidates_2024.json  summary_2024.json
backend/app/data/real/analytics/: monthly_stats.parquet
backend/app/data/real/ba300/: metadata.json
backend/app/data/real/ba300/manifests/: 2024-01.json  2024-02.json  2024-03.json  2024-04.json  2024-05.json  2024-06.json  2024-07.json  2024-08.json  2024-09.json  2024-10.json  2024-11.json  2024-12.json  2025-01.json  2025-02.json  (+8 more)
backend/app/data_sources/: __init__.py  status.py
backend/app/ingestion/: __init__.py  ba300_common.py  ba300_discover.py  ba300_import.py  ba300_preprocess.py  ba300_processing.py  ba300_service.py  ba300_sync.py
backend/app/schemas/: __init__.py  analytics.py
backend/app/workflows/: loader.py  runner.py  tools.py
backend/scripts/: export_clusters_to_geoparquet.py  generate_demo_data.py
backend/tests/: test_ba300_ingestion.py  test_real_data_temporal.py  test_workflows.py
tiler/: Dockerfile  README.md  pyproject.toml
tiler/app/: main.py
(+60 files in other folders)
