[project]
name = "burned-area-explorer-backend"
version = "0.1.0"
description = "FastAPI backend for a stateful workflow-driven EO wildfire finding demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "reportlab>=4.2.0",
  "requests>=2.32.0",
  "pillow>=10.0.0",
  "numpy>=1.26.0",
  "rasterio>=1.4.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
]

[project.optional-dependencies]
geospatial = [
  "geopandas>=1.0.0",
  "shapely>=2.0.0",
  "pyarrow>=16.0.0",
  "duckdb>=1.1.0",
]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
