[project]
name = "burned-area-explorer-tiler"
version = "0.1.0"
description = "Local custom composite tiler for STAC COG assets used by the Burned Area Explorer demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "rio-tiler>=7.0.0",
  "rasterio>=1.4.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
]

[tool.ruff]
line-length = 100
